--- a/rust/acceptance-contracts/contracts/always_success/Cargo.toml
+++ b/rust/acceptance-contracts/contracts/always_success/Cargo.toml
@@ -6,4 +6,4 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ckb-std = { version = "0.14.0", features = ["ckb2023"] }
+ckb-std={ git = "https://github.com/nervosnetwork/ckb-std.git", branch = "master", features = ["ckb2023"] }
