--- a/rust/acceptance-contracts/contracts/spawn_demo/Cargo.toml
+++ b/rust/acceptance-contracts/contracts/spawn_demo/Cargo.toml
@@ -6,7 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-ckb-std = { version = "0.14.0", features = ["ckb2023"] }
+ckb-std={ git = "https://github.com/nervosnetwork/ckb-std.git", branch = "master", features = ["ckb2023"] }
+
 
 [[bin]]
 name = "spawn_demo"
@@ -78,3 +79,14 @@ path = "src/spawn_exec_set_content.rs"
 [[bin]]
 name = "spawn_exec_spawn"
 path = "src/spawn_exec_spawn.rs"
+
+
+[[bin]]
+name = "spawn_current_cycles"
+path = "src/spawn_current_cycles.rs"
+
+[[bin]]
+name = "spawn_current_memory"
+path = "src/spawn_current_memory.rs"
+
+
